0.10.1 (2016-11-22)
-------------------
- New requirement: depend on uritemplate>=2.0.

0.10.0 (2016-11-22)
-------------------
- BREAKING CHANGE: batch update of dataset features has been removed (#137).
- Support limits in forward and reverse geocoder (#133, #135)
- GeoJSON inputs to static API are normalized to a feature collections (#136)
- Add support for upload patch mode
- Additional place types for geocoder (landmark, district, locatity) (#139, #140)
- Bug fix: improper boolean test of tile inputs prevented access to zoom
  level 0 tile containing longitude, latitude (0, 0) (#130). Fixed in #131.

0.9.0 (2016-06-14)
------------------
- bbox support for forward geocoding (#124)
- Added dependency for external polyline module (#126)
- fixed polyline coordinate order bug in Surface (#128)

0.8.0 (2016-03-31)
------------------
- New feature: use boto Bucket's `upload_file()` to stage files, acquiring
  benefits of multipart uploading (#116).

0.7.0 (2016-02-22)
------------------
- All services support HTTP Caching via cachecontrol (#101)
- Country code filtering and unicode support for geocoding (#107, #111)
- Documentation and testing improvements (#106, #108)

0.6.0 (2015-12-17)
------------------
- The Upload API methods `upload` and `stage` take an open file object
  instead of a file path. Client code will need to be updated.
- Add Map Matching API (#91).
- Add Datasets API (#15, #80). This API is currently beta and not publicly
  available.

0.5.0 (2015-12-08)
------------------
- We've vendorized the `polyline` module to work around its out of date `six`
  dependency (#74, #77).
- No more need to pass username arguments to SDK class constructors or methods
  as we now get the username from the provided access token (#81, #85).
- The python usage examples under `docs/` are now tested using doctest.

0.4.0 (2015-11-13)
------------------
- Send a unique User-Agent header with API requests (#66).